fixed bugs 1. clicking in the dropdown caused its collapse 2. displaying of entity zones ; enhanced the load speed

--- a/cliqz@cliqz.com/cliqz-tab/page/newtab.css
+++ b/cliqz@cliqz.com/cliqz-tab/page/newtab.css
@@ -2,7 +2,6 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     font-family: "Lato", sans-serif;
@@ -23,7 +22,7 @@ a, a:hover, a:visited { color: inherit; text-decoration: inherit; }
   background-size: cover;
   background-position: center center;
 }
-.search-container { padding-top: 100px; margin: 0 auto; overflow: hidden; }
+.search-container { padding-top: 100px; margin: 0 auto; overflow: hidden; box-sizing: border-box; }
 @media (min-width: 768px) { .search-container { width: 750px; } }
 @media (min-width: 992px) { .search-container { width: 970px; } }
 @media (min-width: 1200px) { .search-container { width: 1170px; } }
@@ -54,11 +53,13 @@ a, a:hover, a:visited { color: inherit; text-decoration: inherit; }
 .history-lis .mostvisited[selected="selected"] .history-row {
     border: 2px solid #999;
     margin: 3px;
+    box-sizing: border-box;
 }
 .history-row {
     margin: 5px;
     padding: 15px 10px;
     background-color: white;
+    box-sizing: border-box;
 }
 .history-icon {
     float: left;
@@ -67,6 +68,7 @@ a, a:hover, a:visited { color: inherit; text-decoration: inherit; }
     float: left;
     width: calc(100% - 40px);
     padding-left: 5px;
+    box-sizing: border-box;
 }
 .history-title {
     color: black;
@@ -95,6 +97,7 @@ a, a:hover, a:visited { color: inherit; text-decoration: inherit; }
     background-size: 25px 25px;
     background-repeat: no-repeat;
     background-position: 5px 5px;
+    box-sizing: border-box;
 }
 
 /* search */
@@ -108,6 +111,7 @@ a, a:hover, a:visited { color: inherit; text-decoration: inherit; }
     font-weight: 300;
     font-size: 14px;
     outline: 0;
+    box-sizing: border-box;
 }
 
 /* webkit */
@@ -127,9 +131,7 @@ a, a:hover, a:visited { color: inherit; text-decoration: inherit; }
     border: 1px solid #cccccc;
     margin-top: 2px;
     border-bottom: 0;
-}
-#search-dropdown, #search-dropdown * {
-    box-sizing: content-box;   
+    box-sizing: border-box;
 }
 
 .result[selected="selected"] {
@@ -153,6 +155,7 @@ a, a:hover, a:visited { color: inherit; text-decoration: inherit; }
     background-repeat: no-repeat;
     background-position: 5px 5px;
     cursor: pointer;
+    box-sizing: border-box;
 }
 
 .options-container {
@@ -166,6 +169,7 @@ a, a:hover, a:visited { color: inherit; text-decoration: inherit; }
     background-color: white;
     box-shadow: 0 2px 10px rgba(0,0,0,.2);
     padding: 10px;
+    box-sizing: border-box;
 }
 .options-container:before {
     border-color: transparent;
@@ -176,6 +180,7 @@ a, a:hover, a:visited { color: inherit; text-decoration: inherit; }
     position: absolute;
     right: 39px;
     top: -8px;
+    box-sizing: border-box;
 }
 
 .option {
@@ -190,9 +195,11 @@ a, a:hover, a:visited { color: inherit; text-decoration: inherit; }
     background-size: 40px;
     cursor: pointer;
     font-family: "Lato", sans-serif;
+    box-sizing: border-box;
 }
 
 .option:hover {
     border: 1px solid #e5e5e5;
     border-radius: 2px;
+    box-sizing: border-box;
 }
